# proyect-corporativo-craxker

./: .gitignore  Cargo.toml  nixpacks.toml
.sqlx/: query-0c631dd3a76b1b07ad5e49c7e420a53b2574bb19d522d1b96346f23ce344d155.json  query-0f76ab93d3fecb07424a89e50608d2923c4c127de076b85343e0e4ac903194ae.json  query-18e3d28065bc544bae07cbc874f981a15aa924f718cdc595585f23ad9f74b32d.json  query-36bab1c7fe1ebe63c7cdaba56d913e97a814f441f8350d7a215eb5550c6aecf4.json  query-47e773785f083396444c1c35ccd1d8c807f7d9fff0df72d8967f4f697e2b6367.json  query-5b3240e165fad7cc658c342f1cc269718bf49734243c34b498d34c7705cec082.json  query-5bf235f1b80d13590637c3a317a89e34282f3dac93d185dd79570272dfde603d.json  query-5c0b1cf365c6b6532cd477f973029fde59270a71399be42446ab42054f89e250.json  query-6606c13445152cb6c59f59fc3f8531ecc7aa30798d4a31b38b5ec44b6af6da2e.json  query-6744a657f44cf612af982eb2f44c509b506a4b0d3f2416e67b858c3dd919c232.json  query-6b2f8fc559b9408b9079c165c247077e71c12c4111d919263b75f93e6571ab78.json  query-a9581ce9e763b430dafb89f13a6d0938bae3baa084e746b1006cd06c8f867b24.json  query-ae7dd21f160d116c429aea7da42ba378cfbfbb33b58c41b4af45d96561dfff9b.json  query-b5fd2c2f4dd18196e07c28a7f174df7e2aae09d69b8cba1c37d3bcd1ddf4627a.json  query-bc48cf4723a45371557e6785c5332e475022fa944ade2985b65162ce0d097737.json  query-bf0b57a5abbcc60a9714b0d1a8bf16155ac029434a58ff6213f5ec8d9254936d.json  query-c2e3cf1ff2425e924f286a8b50d01f13b969ddc94e654a638fe3fd26657d49e1.json  query-c502787be509b69e24b69d679f469a6e4d20baf012fcc3832a6a05516f94a085.json  (+5 more)
src/: main.rs
src/handlers/: auth.rs  menu.rs  mod.rs  (+5 more)
(+15 files in other folders)
