[package]
name = "axum_system"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { version = "0.8.8", features = ["macros", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# Base de Datos
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Seguridad y Autenticación
jsonwebtoken = "9.3"
bcrypt = "0.15"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Otros
uuid = { version = "1.0", features = ["v4"] } # Para nombres únicos de imágenes
reqwest = { version = "0.11", features = ["json", "blocking"] }